[package]
name = "adventofcode-2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1"
path = "src/day-1/day1.rs"

[[bin]]
name = "day2"
path = "src/day-2/day2.rs"

[[bin]]
name = "day3"
path = "src/day-3/day3.rs"

[[bin]]
name = "day4"
path = "src/day-4/day4.rs"

[[bin]]
name = "day5"
path = "src/day-5/day5.rs"

[[bin]]
name = "day6"
path = "src/day-6/day6.rs"

[[bin]]
name = "day7"
path = "src/day-7/day7.rs"

[dependencies]
rayon = { version = "1.8.0", features = [] }
